refactored weather display, added dropdown menu, styled accordingly

--- a/index.html
+++ b/index.html
@@ -11,8 +11,66 @@
 </head>
 
 <body id="top">
+
     <header>
-        <h1 class="header">Birdwatching Tennessee</h1>
+        <nav>
+            <ul class="main-menu">
+                <h1 class="page">Birdwatching Tennessee</h1>
+                <li class="weather">
+                    <!-- weather data goes here -->
+                </li>
+                <li class="dropdown">
+                    <a>Birds </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="navbar-item" href="#bluebird">
+                                Eastern Bluebird
+                            </a></li>
+                        <li><a class="navbar-item" href="#nwarbler">
+                                Nashville Warbler
+                            </a></li>
+                        <li><a class="navbar-item" href="#dejunco">
+                                Dark Eyed Junco
+                            </a></li>
+                        <li><a class="navbar-item" href="#rthawk">
+                                Red Tailed Hawk
+                            </a></li>
+                        <li><a class="navbar-item" href="#dwoodpecker">
+                                Downy Woodpecker
+                            </a></li>
+                        <li><a class="navbar-item" href="#esowl">
+                                Eastern Screech Owl
+                            </a></li>
+                        <li><a class="navbar-item" href="#ncardinal">
+                                Northern Cardinal
+                            </a></li>
+                        <li><a class="navbar-item" href="#hfinch">
+                                House Finch
+                            </a></li>
+                        <li><a class="navbar-item" href="#rbwoodpecker">
+                                Red Bellied Woodpecker
+                            </a></li>
+                        <li><a class="navbar-item" href="#bjay">
+                                Blue Jay
+                            </a></li>
+                        <li><a class="navbar-item" href="#ecdove">
+                                Eurasian Collared Dove
+                            </a></li>
+                        <li><a class="navbar-item" href="#arobin">
+                                American Robin
+                            </a></li>
+                        <li><a class="navbar-item" href="#etowhee">
+                                Eastern Towhee
+                            </a></li>
+                        <li><a class="navbar-item" href="#mdove">
+                                Mourning dove
+                            </a></li>
+                        <li><a class="navbar-item" href="#cwren">
+                                Carolina Wren
+                            </a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main class="container-fluid">
@@ -133,7 +191,7 @@
                     </div>
         </section>
 
-        <section id="rndove">
+        <section id="ecdove">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
@@ -208,7 +266,7 @@
                 </li>
             </ul>
         </nav>
-        
+
     </footer>
 
     <script src="./assets/script.js"></script>
