--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav>
             <ul class="main-menu">
                 <h1 class="page">Birdwatching Tennessee</h1>
-                <li class="weather">
+                <li id="weather" class="weather">
                     <!-- weather data goes here -->
                 </li>
                 <li class="dropdown">
-                    <a>Birds </a>
+                    <a>Birds &#9660;</a>
                     <ul class="dropdown-menu">
                         <li><a class="navbar-item" href="#bluebird">
                                 Eastern Bluebird
