added nav bar icons and refactored all files

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <header>
         <nav>
             <ul class="main-menu">
-                <h1 class="page">Birdwatching Tennessee</h1>
-                <li id="weather" class="weather">
+                <li>
+                    <h1>&#129718; Birdwatching Tennessee</h1>
+                </li>
+                <li class="weather">
                     <!-- weather data goes here -->
                 </li>
                 <li class="dropdown">
-                    <a>Birds &#9660;</a>
+                    <a>&#129417; Birds</a>
                     <ul class="dropdown-menu">
                         <li><a class="navbar-item" href="#bluebird">
                                 Eastern Bluebird
@@ -104,9 +106,9 @@
                 <div class="columns">
                     <div class="column is-one-third">
                         <a href="https://www.allaboutbirds.org/guide/Dark-eyed_Junco">
-                            <img src="./assets/Dark-eyed junco.png" alt="a picture of a junco" title="Dark Eyed Junco">                       
-                        </a> 
-                         <h4>Dark Eyed Junco</h4>
+                            <img src="./assets/Dark-eyed junco.png" alt="a picture of a junco" title="Dark Eyed Junco">
+                        </a>
+                        <h4>Dark Eyed Junco</h4>
                     </div>
         </section>
 
