touched up the hotspot with correct location, styling, link to navbar and navbar emoji

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li id="weather" class="weather">
                     <!-- weather data goes here -->
                 </li>
+                <li>
+                    <a href="#birding-hotspots">Birding Hotspots &#129517; </a>
+                </li>
                 <li class="dropdown">
                     <a>Birds &#9660;</a>
                     <ul class="dropdown-menu">
@@ -246,7 +249,11 @@
                         <h4>Carolina Wren</h4>
                     </div>
         </section>
-        <div id="card-container">
+        <div id="birding-hotspots">
+            <p class="hotspot content-is-large"><strong>Birding Hotspots in Tennessee</strong></p>
+            <!-- Content of the section goes here -->
+        </div>
+        <div id="card-container" class="observation-card block">
             <!-- this will display hotstpots for birds -->
         </div>
 
