fixed compass location

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <!-- weather data goes here -->
                 </li>
                 <li>
-                    <a href="#birding-hotspots">Birding Hotspots &#129517; </a>
+                    <a href="#birding-hotspots"> &#129517; Birding Hotspots</a>
                 </li>
                 <li class="dropdown">
                     <a>&#129417; Birds</a>
