--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <nav>
             <ul class="main-menu">
                 <li>
-                    <h1>&#129718; Birdwatching Tennessee</h1>
+                    <h1>&#129718;Birdwatching Tennessee</h1>
                 </li>
-                <li class="weather">
+                <li class="weather"><span id="icon"></span>
                     <!-- weather data goes here -->
                 </li>
                 <li>
-                    <a href="#birding-hotspots"> &#129517; Birding Hotspots</a>
+                    <a href="#birding-hotspots"> &#129517;Birding Hotspots</a>
                 </li>
                 <li class="dropdown">
-                    <a>&#129417; Birds</a>
+                    <a>&#129417;Birds</a>
                     <ul class="dropdown-menu">
                         <li><a class="navbar-item" href="#bluebird">
                                 Eastern Bluebird
