--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   </div>
         </section>
         <div id="birding-hotspots">
-            <p class="hotspot content-is-large"><strong>Birding Hotspots in Tennessee</strong></p>
+            <p class="hotspot content-is-large"><strong>Birding Hotspots: What are other birders seeing?</strong></p>
             <!-- Content of the section goes here -->
         </div>
         <div id="card-container" class="observation-card block">
