finsihed fixing save button and the message container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="./assets/style.css" />
   <title>Birdwatching Tennessee</title>
-  <p id="bird-sighting"></p>
 </head>
 
 <body id="top">
@@ -91,8 +90,9 @@
           <h4>Eastern Bluebird</h4>
           </div>
           <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-          <button class="saveBtn">Save Input</button>
+          <button class="saveBtn">Save</button>
          </div> 
+         <div id="messageContainer"></div>
     </div>
   </section>
 
@@ -106,7 +106,7 @@
           <h4>Nashville Warbler</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -121,7 +121,7 @@
           <h4>Dark Eyed Junco</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -138,7 +138,7 @@
           <h4>Red Tailed Hawk</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -153,7 +153,7 @@
           <h4>Downy Woodpecker</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -168,7 +168,7 @@
           <h4>Eastern Screech Owl</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -183,7 +183,7 @@
           <h4>Northern Cardinal</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -198,7 +198,7 @@
           <h4>House Finch</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -214,7 +214,7 @@
           <h4>Red Bellied Woodpecker</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -229,7 +229,7 @@
           <h4>Blue Jay</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -244,7 +244,7 @@
           <h4>Eurasian Collared Dove</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -259,7 +259,7 @@
           <h4>American Robin</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -274,7 +274,7 @@
           <h4>Eastern Towhee</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
@@ -289,7 +289,7 @@
           <h4>Mourning Dove</h4>
                </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div>
   </div>
 </section>
@@ -304,7 +304,7 @@
           <h4>Carolina Wren</h4>
         </div>
         <textarea name="textbox" id="textbox" rows="6" style="height: 100%;"></textarea>
-        <button class="saveBtn">Save Input</button>
+        <button class="saveBtn">Save</button>
        </div> 
   </div>
 </section>
